# hive

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.claude/agents/: janus-wt-portal.md
.claude/commands/hive/: create-project.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  claude-auth-profiles.md  hooks.md  publish-plan-a5-findings.md  publish-plan.md  troubleshooting.md
src/: lib.rs  main.rs
src/cli/: config.rs  hook.rs  mod.rs  project.rs  remote.rs  session.rs  setup.rs  todo.rs  update.rs  worktree.rs
src/common/: chrome.rs  config.rs  debug.rs  frozen.rs  instances.rs  iterm.rs  jsonl.rs  mod.rs  persistence.rs  ports.rs  process.rs  projects.rs  remote_client.rs  remotes.rs  tmux.rs  types.rs  worktree.rs
src/daemon/: hooks.rs  mod.rs  notifier.rs
src/ipc/: messages.rs  mod.rs  remote_protocol.rs
src/serve/: mod.rs  protocol.rs  server.rs  web.html  web.rs  web_types.rs
src/tui/: app.rs  event_loop.rs  mod.rs  ui.rs
tests/: cli_smoke.rs
