[package]
name = "hive"
version = "0.1.0"
edition = "2021"
description = "Interactive Claude Code session dashboard for tmux"
license = "MIT"
repository = "https://github.com/emiperez95/hive"

[[bin]]
name = "hive"
path = "src/main.rs"

[[bin]]
name = "hive-bench"
path = "src/bin/bench.rs"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.28"
dirs = "5"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
